--- a/style.css
+++ b/style.css
@@ -31,15 +31,39 @@
    left: 43.5vh;
    top: 16.5vh;
 }
+.ramka3 {
+   left: 73vh;
+   top: 16.5vh;
+}
+.ramka4 {
+   left: 101.5vh;
+   top: 16.5vh;
+}
+.ramka5 {
+   left: 132vh;
+   top: 16.5vh;
+}
 .column {
    /* border: 2px solid #dcab57; */
    background-color: aliceblue;
    position: absolute;
    width: 26vh;
-   height: 1000px;
+   height: 4000px;
    left: 1vh;
    top: 1vh;
-  
+  margin-top: -6299px;
+}
+.column2 {
+   margin-top: -6139px;
+}
+.column3 {
+   margin-top: -6298px;
+}
+.column4 {
+   margin-top: -6139px;
+}
+.column5 {
+   margin-top: -6298px;
 }
 
 .column img {
@@ -48,9 +72,8 @@
 }
 
 .finish-img {
+   display: flex;
    box-sizing: border-box;
-   
-   
    position: absolute;
    left: 14vh;
    top: 17vh;
@@ -62,10 +85,22 @@
    /* background-color: #13c58f85; */
    position: absolute;
    left: 0vh;
-   top: 0vh;
+   top: -1vh;
    height: 67vh;
    width: 28vh;
    overflow: hidden;
+}
+.line2 {
+   left: 29vh;
+}
+.line3 {
+   left: 59vh;
+}
+.line4 {
+   left: 89vh;
+}
+.line5 {
+   left: 118vh;
 }
 .result { 
    height: 22vh;
@@ -78,7 +113,7 @@
 
 .anim {
    animation-name: move;
-   animation-duration: 5s;
+   animation-duration: 7s;
    /* animation-iteration-count: infinite; */
    animation-fill-mode: forwards;
    
@@ -86,18 +121,16 @@
 
 @keyframes move {
    100% {
-      margin-top: -8200px;
+      margin-top: -100px;
    }
 }
 
 .start {
    position: absolute;
-   bottom: 50px;
-   right: 250px;
-   background-color: red;
-   padding: 20px;
+   width: 25vh;
+    bottom: 1vh;
+    right: 13vh;
+    background-color: red;
+    padding: 3px;
 }
 
-/* .dracon {
-   display: none;
-} */
